add in the DNSSEC signing controls

--- a/templates/named.conf.options.erb
+++ b/templates/named.conf.options.erb
@@ -118,6 +118,12 @@ options {
     //========================================================================
 <% if @dnssec_enable -%>
     dnssec-enable yes;
+    <% if @auto_dnssec -%>
+     auto-dnssec <%= @auto_dnssec %>
+	<% if @inline_signing -%>
+     inline-signing <% @inline_signing %>
+	<%- end -%>
+    <%- end -%>
     <%- if @dnssec_validation != 'absent' -%>
     dnssec-validation <%= @dnssec_validation %>;
     <%- end -%>
