fix up some typos

--- a/templates/named.conf.options.erb
+++ b/templates/named.conf.options.erb
@@ -119,9 +119,9 @@ options {
 <% if @dnssec_enable -%>
     dnssec-enable yes;
     <% if @auto_dnssec -%>
-     auto-dnssec <%= @auto_dnssec %>
+     auto-dnssec <%= @auto_dnssec %>;
 	<% if @inline_signing -%>
-     inline-signing <% @inline_signing %>
+     inline-signing <%= @inline_signing %>;
 	<%- end -%>
     <%- end -%>
     <%- if @dnssec_validation != 'absent' -%>
