fix up the dns sec controls as they should be in the zone file

--- a/templates/zone.erb
+++ b/templates/zone.erb
@@ -50,4 +50,11 @@ zone "<%= @zone %>" {
     <%- end -%>
     };
 <%- end -%>
+<% if @auto_dnssec -%>
+    auto-dnssec <%= @auto_dnssec %>;
+    <% if @inline_signing -%>
+    inline-signing <%= @inline_signing %>;
+    <%- end -%>
+<%- end -%>
+
 };
