add the key directory for dnssec

--- a/templates/zone.erb
+++ b/templates/zone.erb
@@ -55,6 +55,9 @@ zone "<%= @zone %>" {
     <% if @inline_signing -%>
     inline-signing <%= @inline_signing %>;
     <%- end -%>
+    <% @key_directory -%>
+    key-directory <%= @key_directory %>;
+    <%- end -%>
 <%- end -%>
 
 };
