--- a/templates/zone.erb
+++ b/templates/zone.erb
@@ -56,7 +56,7 @@ zone "<%= @zone %>" {
     inline-signing <%= @inline_signing %>;
     <%- end -%>
     <% if @key_directory -%>
-    key-directory <%= @key_directory %>;
+    key-directory "<%= @key_directory %>";
     <%- end -%>
 <%- end -%>
 
