--- a/templates/zone.erb
+++ b/templates/zone.erb
@@ -1,63 +1,64 @@
 zone "<%= @zone %>" {
-    type <%= @zone_type %>;
+type <%= @zone_type %>;
 <% if @zone_notify -%>
-    notify <%= @zone_notify %>;
+	notify <%= @zone_notify %>;
 <% end -%>
 <% if @also_notify.size != 0 -%>
-    also-notify {
-    <%- @also_notify.each do |ip| -%>
-        <%= ip %>;
-    <%- end -%>
-    };
+	also-notify {
+	<%- @also_notify.each do |ip| -%>
+		<%= ip %>;
+	<%- end -%>
+	};
 <% end -%>
 <% if (@zone_type != 'forward') && (@zone_type != 'delegation-only')-%>
-    file "<%= @zone_file %>";
+	file "<%= @zone_file %>";
 <% end -%>
 <% if @zone_type == 'slave' or @zone_type == 'stub' -%>
-<%- if @slave_masters.is_a?(Array) -%>
-    masters { <%= @slave_masters.join(";") %>;};
-<%- else -%>
-    masters { <%= @slave_masters %>;};
-<%- end -%>
+	<%- if @slave_masters.is_a?(Array) -%>
+		masters { <%= @slave_masters.join(";") %>;};
+	<%- else -%>
+		masters { <%= @slave_masters %>;};
+	<%- end -%>
+	allow-transfer {"none";};
 <% elsif @zone_type == 'master' -%>
-    <%- if @allow_transfer.is_a?(Array) and @allow_transfer.size != 0 -%>
-        allow-transfer {
-        <%- @allow_transfer.each do |ip| -%>
-            <%= ip %>;
-        <%- end -%>
-        };
-    <%- end -%>
+	<%- if @allow_transfer.is_a?(Array) and @allow_transfer.size != 0 -%>
+		allow-transfer {
+		<%- @allow_transfer.each do |ip| -%>
+			<%= ip %>;
+		<%- end -%>
+		};
+	<%- end -%>
 <% end -%>
 <% if !@allow_forwarder.empty? and ( @zone_type == 'master' or  @zone_type == 'forward') -%>
-    forward <%= @forward_policy %>;
-    forwarders {
-    <%- @allow_forwarder.each do |ip| -%>
-        <%= ip %>;
-    <%- end -%>
-    };
+	forward <%= @forward_policy %>;
+	forwarders {
+	<%- @allow_forwarder.each do |ip| -%>
+		<%= ip %>;
+	<%- end -%>
+	};
 <% end -%>
-    <%- if @allow_query.size != 0 %>
-        allow-query {
-        <%- @allow_query.each do |ip| -%>
-            <%= ip %>;
-        <%- end -%>
-        };
-    <%- end -%>
+<%- if @allow_query.size != 0 %>
+	allow-query {
+	<%- @allow_query.each do |ip| -%>
+		<%= ip %>;
+	<%- end -%>
+	};
+<%- end -%>
 <%- if @allow_update.size != 0 %>
-    allow-update {
-    <%- @allow_update.each do |ip| -%>
-        <%= ip %>;
-    <%- end -%>
-    };
+	allow-update {
+	<%- @allow_update.each do |ip| -%>
+		<%= ip %>;
+	<%- end -%>
+	};
 <%- end -%>
 <% if @auto_dnssec -%>
-    auto-dnssec <%= @auto_dnssec %>;
-    <% if @inline_signing -%>
-    inline-signing <%= @inline_signing %>;
-    <%- end -%>
-    <% if @key_directory -%>
-    key-directory "<%= @key_directory %>";
-    <%- end -%>
+	auto-dnssec <%= @auto_dnssec %>;
+	<% if @inline_signing -%>
+		inline-signing <%= @inline_signing %>;
+	<%- end -%>
+	<% if @key_directory -%>
+		key-directory "<%= @key_directory %>";
+	<%- end -%>
 <%- end -%>
 
 };
