add in the control keys

--- a/templates/named.conf.options.erb
+++ b/templates/named.conf.options.erb
@@ -147,7 +147,15 @@ statistics-channels {
 
 <% if @control_channel_ip and @control_channel_port -%>
 controls {
-    inet <%= @control_channel_ip %> port <%= @control_channel_port %><% if @control_channel_allow -%> allow { <%= @control_channel_allow.join('; ') %>; }<% end -%>;
+    inet <%= @control_channel_ip %> 
+    port <%= @control_channel_port %>
+<% if @control_channel_allow -%>
+    allow { <%= @control_channel_allow.join('; ') %>; }
+<% end -%>;
+<% if @control_channel_keys -%>
+    allow { <%= @control_channel_keys.join('; ') %>; }
+<% end -%>;
+
 };
 <% end -%>
 
